--- a/Coffee house/src/assets/sass/main.scss
+++ b/Coffee house/src/assets/sass/main.scss
@@ -36,9 +36,9 @@ body {
 }
 
 /* ---------------------------Header----------------------------- */
-
 header {
-  margin: 20px 0;
+  margin: 18px 0;
+
   nav {
     padding: 16px 0;
   }
@@ -85,7 +85,7 @@ header {
       width: 100%;
       height: 100%;
       visibility: hidden;
-      background-color: rgb(236, 221, 189);
+      background-color: $light-pink;
 
       transition: all 0.2s;
       position: fixed;
@@ -102,6 +102,9 @@ header {
       &__header {
         @include flex(space-between, center);
         padding: 20px 40px 0;
+        @media screen and (max-width: $mobile) {
+          padding: 20px 16px 0;
+        }
       }
 
       &__content {
@@ -137,6 +140,7 @@ header {
 
   .menu__item-link,
   .coffee__menu-link {
+    padding-bottom: 4px;
     color: $grey;
     font-weight: $bold;
     font-size: 1rem;
@@ -153,10 +157,15 @@ header {
     }
   }
 
+  &-logo {
+    cursor: auto;
+  }
+
   .coffee__menu-link {
     display: flex;
     gap: 8px;
     align-items: center;
+    
 
     @media screen and (max-width: $tablet) {
       display: none;
@@ -189,16 +198,18 @@ header {
   &__block {
     padding: 100px;
     background-image: url('../img/home/intro/bg.jpg');
-    background-position: right;
+    background-position: center;
     border-radius: $radius;
 
+    
     @media screen and (max-width: $tablet) {
       padding: 100px 60px;
+      background-size: cover;
+
       background-position: center;
     }
     @media screen and (max-width: $mobile) {
       padding: 60px 16px;
-      background-size: cover;
     }
 
     &-content {
@@ -238,12 +249,17 @@ header {
     &-btn {
       @extend %btn-style;
       gap: 8px;
+      position: relative;
 
       img {
-        display: none;
+        opacity: 0;
+        position: absolute;
+        top: calc(50% - 10px);
+        right: 50px;
+        transition: .5s linear all;
       }
       &:hover img {
-        display: flex;
+        opacity: 1;
       }
     }
   }
@@ -440,8 +456,9 @@ header {
     }
 
     @media screen and (max-width: $tablet) {
-      width: 100%;
-      object-fit: cover;
+      width: 688px;
+      height: 590px;
+      background-size: auto;
     }
     @media screen and (max-width: $mobile) {
       width: 348px;
@@ -580,97 +597,106 @@ header {
 /* ---------------------------/Mobile----------------------------- */
 
 /* ---------------------------Footer----------------------------- */
-.footer__inner {
-  @include flex(flex-end, center);
-  background-color: $light-grey;
-  border-radius: $radius;
-  height: 450px;
-  padding: 100px;
-  gap: 100px;
+.footer {
+  &__inner {
+    @include flex(flex-start, center);
+    background-color: $light-grey;
+    border-radius: 40px;
+    height: 450px;
+    padding: 100px;
 
-  @media screen and (max-width: $tablet) {
-    @include flex-column;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 100px 60px;
-    height: 100%;
-  }
-  @media screen and (max-width: $mobile) {
-    padding: 60px 15px;
-    gap: 42px;
-  }
-}
+    gap: 100px;
 
-.footer__slogan {
-  width: 50%;
-  @media screen and (max-width: $tablet) {
-    width: 100%;
-  }
-}
-
-.footer__title {
-  @extend %section-title;
-  text-align: left;
-  span {
-    font-style: italic;
-    margin-bottom: 40px;
-    color: $secondary;
-  }
-
-  @media screen and (max-width: $tablet) {
-    font-size: 3.75rem;
-  }
-  @media screen and (max-width: $mobile) {
-    font-size: 2rem;
-  }
-}
-
-.footer__social {
-  display: flex;
-  gap: 12px;
-  &-item {
-    @include flex(center, center);
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 1px solid $dark-white;
-
-    transition: all 0.2s linear;
-
-    path {
-      transition: all 0.2s linear;
+    @media screen and (max-width: $tablet) {
+      @include flex-column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 100px 60px;
+      height: 100%;
     }
-    &:hover {
-      background-color: $light-pink;
+    @media screen and (max-width: $mobile) {
+      padding: 60px 15px;
+      gap: 42px;
+    }
+  }
+
+  &__slogan {
+    width: 50%;
+
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+    }
+  }
+
+  &__title {
+    @extend %section-title;
+    text-align: left;
+    color: $light-pink;
+
+    span {
+      font-style: italic;
+      margin-bottom: 40px;
+      color: $secondary;
+    }
+
+    @media screen and (max-width: $tablet) {
+      font-size: 3.75rem;
+    }
+    @media screen and (max-width: $mobile) {
+      font-size: 2rem;
+    }
+  }
+
+  &__social {
+    display: flex;
+    gap: 12px;
+
+    &-item {
+      @include flex(center, center);
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      border: 1px solid $dark-white;
+      transition: all 0.2s linear;
+
       path {
-        stroke: $grey;
+        transition: all 0.2s linear;
+      }
+
+      &:hover {
+        background-color: $light-pink;
       }
     }
   }
+
+  &__contacts {
+    width: 50%;
+
+    &-title {
+      @extend %section-title;
+      font-size: 1.5rem;
+      color: $light-pink;
+      text-align: left;
+    }
+
+    &-list {
+      @include flex-column;
+      align-items: flex-start;
+      list-style: none;
+      gap: 18px;
+    }
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+    }
+  }
 }
 
-.footer__contacts {
-  width: 50%;
-  &-title {
-    font-size: 1.5rem;
-    font-weight: $bold;
-    line-height: 125%;
-    margin-bottom: 40px;
-    color: $light-pink;
-  }
-  &-list {
-    @include flex-column;
-    list-style: none;
-    align-items: flex-start;
-    gap: 18px;
-  }
-
-  @media screen and (max-width: $tablet) {
-    width: 100%;
-  }
+.footer__social-item:hover path {
+  stroke: $grey;
 }
 
 .contact-link {
+  padding-bottom: 4px;
   gap: 8px;
   text-decoration: none;
   color: $light-pink;
@@ -679,16 +705,17 @@ header {
   line-height: 150%;
   position: relative;
   transition: all 0.2s linear;
+
+  &::after {
+    @include after-link-underline();
+    background-color: $light-pink;
+  }
 }
 
-.contact-link::after {
-  @include after-link-underline;
-  background-color: $light-pink;
-  bottom: -4px;
-}
-.contact-link:hover::after {
+.contact-link:not(.contact-link-span):hover::after {
   opacity: 1;
   transform: scale(1);
 }
+
 
 /* ---------------------------/Footer----------------------------- */
