--- a/Coffee house/src/assets/sass/main.scss
+++ b/Coffee house/src/assets/sass/main.scss
@@ -14,7 +14,7 @@ body {
   font-weight: $regular;
   margin: 0 auto 40px;
   background-color: $light-pink;
-
+  -webkit-tap-highlight-color: transparent;
   @media screen and (max-width: $tablet) {
     width: 100%;
   }
@@ -293,9 +293,9 @@ header {
     @include flex(center, center);
     margin-bottom: 38px;
     cursor: pointer;
-    width: 60px;
+    min-width: 60px;
     height: 60px;
-    border-radius: 50%;
+    border-radius: 30px;
     border: 1px solid $light-grey;
     background-color: transparent;
 
