--- a/Coffee house/src/assets/sass/pages/menu.scss
+++ b/Coffee house/src/assets/sass/pages/menu.scss
@@ -10,7 +10,7 @@ body {
 
   margin: 0 auto 40px;
   background-color: $light-pink;
-
+  -webkit-tap-highlight-color: transparent;
   @media screen and (max-width: $tablet) {
     width: 100%;
   }
@@ -251,6 +251,7 @@ header {
   text-decoration: none;
   cursor: pointer;
   transition: all 0.2s linear;
+  
 
   &-img {
     @include flex(center, center);
